# CCTraveler

./: .gitignore  Cargo.toml  README-zh.md  README.md  config.toml  config.toml.example  package.json  pnpm-lock.yaml  test_agent_tuning.md  test_transport.sh  vercel.json  携程酒店爬取可行性报告.md
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs  sse.rs  types.rs
crates/api/src/providers/: anthropic.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  doctor.rs  expand.rs  init.rs  main.rs  oneshot.rs  repl.rs  slash.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  conversation.rs  lib.rs  prompt.rs  session.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_add_transport_and_geo_tables.sql  002_add_geo_lookup_tables.sql  003_add_price_subscriptions.sql  004_add_performance_indexes.sql
crates/storage/src/: db.rs  lib.rs  models.rs  queries.rs
crates/tools/: Cargo.toml
crates/tools/src/: analyze.rs  cache.rs  definitions.rs  distance.rs  executor.rs  export.rs  flight.rs  geo.rs  lib.rs  metrics.rs  monitor.rs  notifier.rs  planner.rs  route.rs  scheduler.rs  scrape.rs  search.rs  train.rs  wiki.rs
crates/tools/tests/: e2e_tests.rs  retry_tests.rs  tool_tests.rs
data/: cctraveler.db-shm  cctraveler.db-wal  cctraveler.db.corrupted  city_lookup.json  ctrip_cities.json
data/geo/: airports.json  attractions.json  cities.json  districts.json  stations.json
docs/: ROADMAP_v0.3.md  TEST_REPORT_v0.2.md  agent-tuning-guide.md  architecture-zh.md  architecture.md  cctraveler-cli-design.md  product-positioning-summary.md  product.md  v0.3_当前实现与待实现.md
docs/implementation/: T1-default-chat.md  T10-streaming-output.md  T11-install-and-release.md  T2-oneshot-prompt.md  T3-layered-config.md  T4-init-wizard.md  T5-doctor.md  T6-slash-commands.md  T7-tool-status-line.md  T8-at-references.md  T9-session-resume.md
examples/: test_geo.rs
scripts/: dev.sh  import_geo_data.py  install.sh  setup.sh  test_geo_query.py
services/scraper/: pyproject.toml
services/scraper/src/: server.py
services/scraper/src/anti_detect/: fingerprint.py  proxy.py
services/scraper/src/ctrip/: fetcher.py  parser.py  session.py  types.py
services/scraper/src/flight/: __init__.py  fetcher.py  types.py
services/scraper/src/train/: __init__.py  fetcher.py  types.py
services/scraper/src/utils/: geo_lookup.py  rate_limit.py  station_loader.py
services/scraper/tests/: test_ctrip.py
