[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "stream"] }
tokio = { workspace = true }
futures-util = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
