[package]
name = "cctraveler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cctraveler"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
storage = { path = "../storage" }
tools = { path = "../tools" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
