[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
