[project]
name = "cctraveler-scraper"
version = "0.1.0"
description = "Ctrip hotel scraper service for CCTraveler"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "scrapling>=0.2",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
