[project]
name = "cctraveler-scraper"
version = "0.2.0"
description = "Hotel and train ticket scraper service for CCTraveler"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "httpx>=0.28",
    "selenium>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
